Edit: Fixed Canvas Overflow on Mobile

--- a/src/assets/css/main-theme-mobile.css
+++ b/src/assets/css/main-theme-mobile.css
@@ -22,4 +22,11 @@
         overflow: hidden;
     }
 
+    .canvas {
+        max-width: 60vw;
+        align-items: center;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
 }
